fix(common): fix docker and cleos executions (#4)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   nodeosd:
     image: eosio/eos-dev
-    command: /opt/eosio/bin/nodeosd.sh --data-dir /opt/eosio/bin/data-dir -e # --replay-blockchain --hard-replay-blockchain
+    command: /opt/eosio/bin/nodeosd.sh --data-dir /opt/eosio/bin/data-dir -e --http-validate-host=false # --replay-blockchain --hard-replay-blockchain
     hostname: nodeosd
     ports:
       - 8888:8888
@@ -12,17 +12,13 @@ services:
       - "8888"
     volumes:
       - nodeos-data-volume:/opt/eosio/bin/data-dir
-    environment:
-      - VIRTUAL_HOST=local.eosio.cr
-      - VIRTUAL_PORT=8888
-    cap_add:
-      - IPC_LOCK
-    stop_grace_period: 10m
     networks:
       eos-local:
         aliases:
           - local.eosio.cr
-
+    environment:
+      - VIRTUAL_HOST=local.eosio.cr
+      - VIRTUAL_PORT=8888
   keosd:
     image: eosio/eos-dev
     command: /opt/eosio/bin/keosd --wallet-dir /opt/eosio/bin/data-dir --http-server-address=127.0.0.1:8900
@@ -33,7 +29,7 @@ services:
       - keosd-data-volume:/opt/eosio/bin/data-dir
     stop_grace_period: 10m
     networks:
-      eos-local:
+      - eos-local
 
   nginx-proxy:
     image: jwilder/nginx-proxy
@@ -42,7 +38,7 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
     networks:
-      eos-local:
+      - eos-local
 
 volumes:
  nodeos-data-volume:
