feat: EOS 1.4 and microservices architecture (#7)
* feat: move microservices structure

* refactor: use monstereos base

* docs(readme): update features section

* refactor(demux): fix tslint errors

* docs(readme): update gulp scripts section

* docs(readme): improve contributing section

* docs(readme): add reactjs client details

* docs(readme): add CI and CD to feature list

* refactor(frontend): update dependencies

* refactor: upgrade EOS nodes to 1.4.1

* docs(readme): general updates

* fix: account names length

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -34,6 +34,19 @@
       ]
     },
     {
+      "login": "murillojorge",
+      "name": "Jorge Murillo",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/1179619?v=4",
+      "profile": "https://github.com/murillojorge",
+      "contributions": [
+        "ideas",
+        "doc",
+        "design",
+        "code",
+        "review"
+      ]
+    },
+    {
       "login": "xavier506",
       "name": "Xavier Fernandez",
       "avatar_url": "https://avatars0.githubusercontent.com/u/5632966?v=4",
@@ -43,6 +56,16 @@
         "blog",
         "talk",
         "infra"
+      ]
+    },
+    {
+      "login": "rubenabix",
+      "name": "Rubén Abarca Navarro",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/13205620?v=4",
+      "profile": "https://github.com/rubenabix",
+      "contributions": [
+        "ideas",
+        "review"
       ]
     }
   ]
