--- a/.editorconfig
+++ b/.editorconfig
@@ -1,22 +1,18 @@
-# EditorConfig helps developers define and maintain consistent
-# coding styles between different editors and IDEs.
-# editorconfig.org
-
+# http://editorconfig.org
 root = true
 
 [*]
-
-# We recommend you to keep these unchanged.
 charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
+max_line_length = 130
 trim_trailing_whitespace = true
 
-[package.json]
-indent_style = space
-indent_size = 2
-
 [*.md]
+max_line_length = 0
 trim_trailing_whitespace = false
+
+[COMMIT_EDITMSG]
+max_line_length = 72
