--- a/services/eos-dev/Dockerfile
+++ b/services/eos-dev/Dockerfile
@@ -10,8 +10,8 @@ WORKDIR /opt/eosio/bin
 
 # install EOS Contract Development Toolkit
 RUN wget https://github.com/eosio/eosio.cdt/releases/download/v1.3.2/eosio.cdt-1.3.2.x86_64.deb
-RUN sudo apt install ./eosio.cdt-1.3.2.x86_64.deb
-RUN sudo rm ./eosio.cdt-1.3.2.x86_64.deb
+RUN apt install ./eosio.cdt-1.3.2.x86_64.deb
+RUN rm ./eosio.cdt-1.3.2.x86_64.deb
 
 # used by start.sh
 ENV DATA_DIR /root/.local/share
