--- a/services/eos-fullnode/Dockerfile
+++ b/services/eos-fullnode/Dockerfile
@@ -9,7 +9,7 @@ VOLUME /opt/application
 WORKDIR /opt/eosio/bin
 
 ## Add the wait script to the image
-ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.4.0/wait /wait
+ADD ./utils/wait /wait
 RUN chmod +x /wait
 
 # Used by start.sh
