docs(readme): update contributors section

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -79,6 +79,36 @@
         "review",
         "ideas"
       ]
+    },
+    {
+      "login": "leordev",
+      "name": "Leo Ribeiro",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/6147142?v=4",
+      "profile": "http://leordev.github.io",
+      "contributions": [
+        "ideas",
+        "review"
+      ]
+    },
+    {
+      "login": "mahcr",
+      "name": "Mariano Alvarez",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/16544451?v=4",
+      "profile": "https://github.com/mahcr",
+      "contributions": [
+        "ideas",
+        "review"
+      ]
+    },
+    {
+      "login": "lucca65",
+      "name": "Julien Lucca",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/1082127?v=4",
+      "profile": "http://lucca65.github.io",
+      "contributions": [
+        "review",
+        "ideas"
+      ]
     }
   ]
 }
