--- a/services/eos-dev/Dockerfile
+++ b/services/eos-dev/Dockerfile
@@ -1,5 +1,7 @@
 FROM eosio/eos:v1.4.2
 
+ARG symbol=EOS
+
 RUN apt-get update && apt-get install curl -y
 
 COPY ./ /opt/application
@@ -8,10 +10,11 @@ RUN apt install /opt/application/utils/eosio.cdt-1.4.0.x86_64.deb
 
 VOLUME /opt/application
 
-WORKDIR /opt/eosio/bin
+WORKDIR /opt/application
 
 # used by start.sh
-ENV DATA_DIR /root/.local/share
+ENV DATA_DIR /root/data-dir
 ENV CONFIG_DIR /opt/application/config
+ENV NODEOS_BIN_DIR /opt/eosio/bin
 
 CMD /opt/application/start.sh
