--- a/services/eos-dev/config/config.ini
+++ b/services/eos-dev/config/config.ini
@@ -1,5 +1,5 @@
 # the endpoint upon which to listen for incoming connections (eosio::bnet_plugin)
-bnet-endpoint = 0.0.0.0:4321
+# bnet-endpoint = 0.0.0.0:4321
 
 # the number of threads to use to process network messages (eosio::bnet_plugin)
 # bnet-threads =
