feat(pgweb): add postgres web admin panel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,22 @@ services:
         aliases:
           - postgres.eoslocal.io
 
+  pgweb:
+    image: sosedoff/pgweb:latest
+    restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      DATABASE_URL: postgres://user:pass@postgres:5432/eoslocal?sslmode=disable
+      VIRTUAL_HOST: pgweb.eoslocal.io
+      VIRTUAL_PORT: 8081
+    depends_on:
+      - postgres
+    networks:
+      eoslocal:
+        aliases:
+          - pgweb.eoslocal.io
+
   flyway:
     image: boxfuse/flyway:5.2.1
     command: -url=jdbc:postgresql://postgres:5432/eoslocal -user=user -password=pass -connectRetries=60 migrate
@@ -46,6 +62,27 @@ services:
       eoslocal:
         aliases:
           - mongo.eoslocal.io
+
+
+  admin-mongo:
+    image: mrvautin/adminmongo:latest
+    restart: "always"
+    ports:
+      - '8082:8082'
+    environment:
+      PORT: 8082
+      CONN_NAME: fullnode
+      DB_HOST: mongo.eoslocal.io
+      DB_PORT: 27017
+      VIRTUAL_HOST: admin-mongo.eoslocal.io
+      VIRTUAL_PORT: 8082
+    depends_on:
+      - mongo
+      - fullnode
+    networks:
+      eoslocal:
+        aliases:
+          - admin-mongo.eoslocal.io
 
   fullnode:
     build:
@@ -131,24 +168,6 @@ services:
       eoslocal:
         aliases:
           - demux.eoslocal.io
-
-  admin-mongo:
-    image: mrvautin/adminmongo:latest
-    ports:
-      - '8082:8082'
-    environment:
-      PORT: 8082
-      CONN_NAME: fullnode-mongo
-      DB_HOST: mongo
-      VIRTUAL_HOST: admin-mongo.eoslocal.io
-      VIRTUAL_PORT: 8082
-    depends_on:
-      - mongo
-      - fullnode
-    networks:
-      eoslocal:
-        aliases:
-          - admin-mongo.eoslocal.io
 
   # nginx reverse proxy that allows accesing the services directly on the host machine
   # the wildcard *.esolocal.io that points to 127.0.0.1,
