--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -8,7 +8,10 @@
     "start": "env-cmd .env react-scripts start",
     "build": "env-cmd .env react-scripts build",
     "test": "env-cmd .env react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "rimraf": "rimraf",
+    "cp": "cp",
+    "move:languages": "npm run rimraf -- public/locales && npm run cp -- src/language/ public/locales"
   },
   "dependencies": {
     "@material-ui/core": "^3.0.1",
@@ -38,6 +41,7 @@
     "scatterjs-plugin-eosjs2": "^1.1.4"
   },
   "devDependencies": {
+    "cp": "^0.2.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-react": "^7.0.2",
     "eslint-plugin-node": "^7.0.1",
@@ -47,6 +51,7 @@
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
     "react-scripts": "2.0.5",
+    "rimraf": "^2.6.2",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
   },
