--- a/services/eos-api-node/config.ini
+++ b/services/eos-api-node/config.ini
@@ -37,4 +37,4 @@ plugin = eosio::chain_api_plugin
 plugin = eosio::db_size_api_plugin
 plugin = eosio::mongo_db_plugin
 
-p2p-peer-address = eosiodev:9876
+p2p-peer-address = eos-producer:9876
