--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -129,6 +129,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "pakokrew",
+      "name": "Pacien Boisson",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1371207?v=4",
+      "profile": "https://ngfar.io",
+      "contributions": [
+        "ideas"
+      ]
     }
   ]
 }
