--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -21,19 +21,26 @@
     "@reach/router": "^1.2.1",
     "@rematch/core": "^1.0.0-beta.4",
     "@rematch/persist": "^1.0.2",
-    "apollo-boost": "^0.1.16",
+    "apollo-cache-inmemory": "^1.3.10",
+    "apollo-client": "^2.4.6",
+    "apollo-link": "^1.2.3",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
+    "apollo-link-state": "^0.4.2",
     "env-cmd": "^8.0.2",
     "eslint": "4.19.1",
     "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "i18next": "^12.0.0",
     "i18next-browser-languagedetector": "^2.2.3",
     "i18next-xhr-backend": "^1.5.1",
+    "lodash.flow": "^3.5.0",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
     "react-i18next": "^8.3.0",
     "react-redux": "^5.0.7",
-    "react-scripts": "2.0.0-next.a671462c",
+    "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-render": "^0.0.3",
@@ -50,7 +57,7 @@
     "ncp": "^2.0.0",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
-    "react-scripts": "2.0.5",
+    "react-scripts": "2.0.0-next.a671462c",
     "rimraf": "^2.6.2",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1"
