--- a/services/frontend/.env
+++ b/services/frontend/.env
@@ -1,3 +1,3 @@
 NODE_PATH=src
 REACT_APP_API_URL=https://api.eosio.cr
-REACT_APP_GRAPHQL_URL=http://localhost:3030/graphql
+REACT_APP_GRAPHQL_URL=http://localhost:8088/v1alpha1/graphql
