feat(eosio): use a single eosio node

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -106,6 +106,7 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/1082127?v=4",
       "profile": "http://lucca65.github.io",
       "contributions": [
+        "code",
         "review",
         "ideas"
       ]
